# PyTeXEditor

./: .coverage  .gitignore  .gitmodules  README.md  pyproject.toml  pyvenv.cfg  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
resources/: actual_document.tex  broken_document.tex  good_document.tex  linked_document.tex  simple_document.tex
src/PyTeXEditor/: FileHandler.py  LatexDocument.py  PyTeXEditor  Ribbon.py  Sidebar.py  TextEdit.py  Window.py  __init__.py  data_structures.py  document_elements.py  element_ui.py  extract_latex.py  file_dialog.py  file_handler.py  hello.py  icons.py  latex_document.py  main.py  menubar.py  ribbon.py  sidebar.py  textedit.py  userdata.py  window.py
src/PyTeXEditor/DataStructures/: __init__.py
src/PyTeXEditor/GuiElements/: Window.py  __init__.py
tests/: test_data_structures.py  test_document_elements.py  test_extract_latex.py  test_file_dialog.py  test_file_handler.py  test_latex_document.py  test_main_window.py  test_menubar.py  test_sidebar.py  test_slapping.py  test_textedit.py  test_textedit_hide_sidebar.py
