[metadata]
name = PyTeXEditor
description = LaTeX editor
author = Maciej Kaszynski
license = MIT
license_file = LICENSE
platform = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    PyTeXEditor
python_requires = >= 3.9
package_dir =
    = src
zip_file = no

[options.package_data]
PyTeXEditor = py.typed

[flake8]
max-line-length=80

[easy_install]
install_dir = $HOME/.local/lib/python3.11/site-packages
